tests/snapshots/snapshot__type_errors@invalid_field_access.roto.snap
---
source: tests/snapshot.rs
expression: string
input_file: tests/scripts/type_errors/invalid_field_access.roto
---
Error: Type error: no static method `foo` on type `String`
   ╭─[ tests/scripts/type_errors/invalid_field_access.roto:2:17 ]
   │
 2 │     let b = String.foo;
   │                    ─┬─  
   │                     ╰─── unknown static method `foo`
───╯
